<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FallDetector</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="version">Version Demo</string>
    <string name="contact">Contact</string>
    <string name="name">Your Name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="warning">Are you OK?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="nameHint">Type a Text</string>
    <string name="phoneHint">Type a Phone</string>
    <string name="close">Close</string>
    
</resources>
