<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:weightSum="100">
    	<TextView
        	android:id="@+id/name"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:text="@string/name" 
        	android:layout_weight="70"/>

    	<EditText
        	android:id="@+id/etName"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_weight="30"
        	android:ems="10"
        	android:hint="@string/nameHint"
        	android:inputType="text" >

        	<requestFocus />
   	 	</EditText>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:weightSum="100">

    	<LinearLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_weight="10"
    	    android:orientation="horizontal"
    	    android:weightSum="10" >

    	    <TextView
    	        android:id="@+id/contact"
    	        android:layout_width="match_parent"
    	        android:layout_height="wrap_content"
    	        android:layout_weight="7"
    	        android:gravity="center"
    	        android:text="@string/contact"
    	        tools:ignore="NestedWeights" />

    	<EditText
        	android:id="@+id/etContact"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:ems="10"
        	android:layout_weight="3"
        	android:hint="@string/phoneHint"
        	android:inputType="phone" />
    </LinearLayout>

    	<Button
    	    android:id="@+id/btncontact"
    	    android:layout_width="match_parent"
    	    android:layout_height="fill_parent"
    	    android:layout_weight="90"
    	    android:background="@drawable/danhba" />

	</LinearLayout>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:weightSum="100">
	    <Button
	        android:id="@+id/btnok"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/ok"
	        android:layout_weight="50" 
	        />

    	<Button
	        android:id="@+id/btncancel"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel" 
	        android:layout_weight="50"/>
	</LinearLayout>

</LinearLayout>
